--- a/dominioColecciones/dominioColecciones.csproj
+++ b/dominioColecciones/dominioColecciones.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C2C3D224-7159-4153-9E65-A76B9DD120E3}</ProjectGuid>
+    <ProjectGuid>{2E949FF4-2B09-48CB-B48D-F52B1AE83281}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>capaUsuarioConsola</RootNamespace>
-    <AssemblyName>capaUsuarioConsola</AssemblyName>
+    <RootNamespace>dominioColecciones</RootNamespace>
+    <AssemblyName>dominioColecciones</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,18 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gestor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\capaDominio\capaDominio.csproj">
-      <Project>{59ea4da7-15ac-4831-8c57-3ef31802a181}</Project>
-      <Name>capaDominio</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
